2013-08-21  James Pallister  <james.pallister@embecosm.com>

	* include/mageec-ml.h (add_result): Correct use of mageec_feature,
	mageec_flag.
	* ml/ml.c (add_result): Likewise.

2013-08-21  Simon Cook  <simon.cook@embecosm.com>

	* include/elfhash.h: Define hashedelf::ignoredsection.
	* include/elfhash.cpp: Likewise.

2013-08-21  Simon Cook  <simon.cook@embecosm.com>

	* include/elfhash.h: Define hashedelf.
	* mageec/elfhash.cpp: Define hashedelf class implementation.
	* mageec/mageechash.cpp: Added command line interface to hashedelf.
	* mageec/Makefile.am: Build mageechash, add elfhash to libmageec.
	* mageec/Makefile.in: Regenerated.
	* Makefile.am: Include elfhash.h with distribution.
	* Makefile.in: Regenerated.
	* configure.ac: Add test for libelf and libgcrypt.
	* configure: Regenerated.

2013-08-14  Simon Cook  <simon.cook@embecosm.com>

	* doc/Doxyfile.in: Add Doxygen documentation.
	* doc/mageec_logo.png: Add logo for Doxygen documentation.
	* gcc_plugin/gcc-callbacks.cpp: Add placeholder GCC Plugin callbacks.
	* gcc_plugin/gcc-plugin.cpp: Initial plugin.
	* gcc_plugin/mageec-plugin.h: Add header for GCC plugin.
	* gcc_plugin/plugin-info.cpp: Add printout for GCC/Plugin information.
	* gcc_plugin/Makefile.am: Added.
	* gcc_plugin/Makefile.in: Generated.
	* include/mageec-features.h: Add initial work on feature class.
	* include/mageec-flags.h: Add initial work on flag class.
	* include/mageec-ml.h: Add initial interface for machine learner.
	* include/mageec.h: Add initial MAGEEC interface.
	* mageec/mageec.cpp: Add initial MAGEEC class implementation.
	* mageec/Makefile.am: Added.
	* mageec/Makefile.in: Generated.
	* ml/ml.cpp: Add inital machine learner class implementation.
	* ml/Makefile.am: Added.
	* ml/Makefile.in: Generated.
	* AUTHORS, COPYING, INSTALL, NEWS, m4/, aclocal.m4, config.guess,
	config.sub, depcomp, install-sh, ltmain.sh, missing: Add build
	infrastructure.
	* README: Add project introduction readme.
	* Makefile.am: Added.