@@ -1,3 +1,8 @@
+2013-09-03  Simon Cook  <simon.cook@embecosm.com>
+
+	* mageec/mageechash.cpp (main): Only display hash output if no error
+	generating hash.
+
 2013-08-21  James Pallister  <james.pallister@embecosm.com>
 
 	* include/mageec-ml.h (add_result): Correct use of mageec_feature,
